<resources>
    <string name="app_name">Ticket Builder</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="save">Save</string>
    <string name="due_date">Due Date</string>
    <string name="ticket_description">Ticket Description</string>
    <string name="ticket_name">Ticket Name</string>
    <string name="priority_high">Priority: High</string>
    <string name="date">Due: 2024-09-30</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <!-- Other strings -->
    <string-array name="sorting_options">
        <item>Date Ascending</item>
        <item>Date Descending</item>
    </string-array>
</resources>